# pkg/api/deployment.go
@@ -5,7 +5,14 @@ import (
 	"nuc.lliu.ca/gitea/app/scale_maker/pkg/k8s"
 )
 
-// listDeployments doc
+// listDeployments gets the list of the deployments in the k8s cluster.
+// @Summary Gets the list of the deployments in the k8s cluster.
+// @Description Gets the list of the deployments in the k8s cluster.
+// @Tags Kubernetes
+// @Accept  json
+// @Produce  json
+// @Success 200 "Sample result: "{\"daemonsets\":[],\"namespace\":\"default\",\"number_of_daemonsets\":0,\"status\":200}"" string
+// @Router /api/v1/deployment/list [get]
 func listDeployments(c *fiber.Ctx) error {
 	resource := "deployments"
 	namespace := c.Query("namespace")
