# pkg/api/namespace.go
@@ -7,7 +7,14 @@ import (
 	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
 )
 
-// listNamespaces doc
+// listNamespaces gets the list of the namespaces in the k8s cluster.
+// @Summary Gets the list of the namespaces in the k8s cluster.
+// @Description Gets the list of the namespaces in the k8s cluster.
+// @Tags Kubernetes
+// @Accept  json
+// @Produce  json
+// @Success 200 "Sample result: "{\"daemonsets\":[],\"namespace\":\"default\",\"number_of_daemonsets\":0,\"status\":200}"" string
+// @Router /api/v1/namespace/list [get]
 func listNamespaces(c *fiber.Ctx) error {
 	if kc.ClientSet == nil {
 		return c.Status(http.StatusInternalServerError).JSON(
