# pkg/api/statefulset.go
@@ -5,7 +5,14 @@ import (
 	"nuc.lliu.ca/gitea/app/scale_maker/pkg/k8s"
 )
 
-// listStatefulsets doc
+// listStatefulsets gets the list of the statefulsets in the k8s cluster.
+// @Summary Gets the list of the statefulsets in the k8s cluster.
+// @Description Gets the list of the statefulsets in the k8s cluster.
+// @Tags Kubernetes
+// @Accept  json
+// @Produce  json
+// @Success 200 "Sample result: "{\"daemonsets\":[],\"namespace\":\"default\",\"number_of_daemonsets\":0,\"status\":200}"" string
+// @Router /api/v1/statefulset/list [get]
 func listStatefulsets(c *fiber.Ctx) error {
 	resource := "statefulsets"
 	namespace := c.Query("namespace")
